updated wagtail and fixed image overlap issue

--- a/home/static/css/home_page.css
+++ b/home/static/css/home_page.css
@@ -58,7 +58,7 @@
 	}
 }
 
-@media only screen (max-width: 991) and (min-width: 768px) {
+@media only screen and (max-width: 991px) and (min-width: 768px) {
 	.experience-image{
 		display: none;
 	}
